fix: ajv error should auto wrap

--- a/packages/drip-table/src/wrapper/index.module.less
+++ b/packages/drip-table/src/wrapper/index.module.less
@@ -10,4 +10,6 @@
   border: 1px solid #ff0000;
   margin: 0;
   padding: 5px 10px;
+  word-break: break-all;
+  white-space: pre-wrap;
 }
